syntax = "proto3";

package auth;

option go_package = "github.com/emergency-material-system/api/proto/auth";

// 认证服务
service AuthService {
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // 用户登出
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  
  // 刷新令牌
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // 验证令牌
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  int64 user_id = 2;
  repeated string roles = 3;
}

